[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Fonts/hardigan/Hardigan.otf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://art/black_square.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.607843, 0.247059, 0.247059, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Mask" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.77551
margin_bottom = 3.77551
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Mask"]
modulate = Color( 1, 1, 1, 0.521569 )
scale = Vector2( 200, 200 )
texture = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.99341
margin_top = -42.5
margin_right = 5.99341
margin_bottom = 42.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "King's Gambit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
